# pipeline_derive

./: .gitignore  Cargo.toml  LICENSE
pipeline_derive/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
pipeline_derive/src/: codegen.rs  errors.rs  lib.rs
pipeline_example/: Cargo.toml
pipeline_example/src/: main.rs
src/: attributes.rs  lib.rs  pipeline.rs
